# cpp_game_engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
include/glad/: glad.h
res/shaders/: basicTest.frag  basicTest.vert  fullscreen.frag  fullscreen.vert  textured.frag  textured.vert
res/shaders/lighting/: all.frag  all.vert  applyLight.glsl  fog.glsl  light.glsl  lightingBlock.glsl  matrixBlock.glsl  sampleHeightmap.glsl  sampleShadowMap.glsl
src/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ColorRGBA.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLResource.cpp  OpenGLResource.h  Program.cpp  Program.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  buffer.cpp  buffer.h  commands.cpp  commands.h  errors.cpp  errors.h  fullscreen_quad_pipeline.h  glad.c  lighting.cpp  lighting.h  main.cpp  pipeline.cpp  pipeline.h  textured_pipeline.h  texturing.cpp  texturing.h  transform.h  util.h
src/codegen/: DirStackFileIncluder.h  glsl_to_cpp.cpp  glsl_to_cpp.h  shader_codegen.cpp
src/graphics/: ColorRGBA.cpp  ColorRGBA.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLResource.h  Program.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  VertexArray.h  buffer.cpp  buffer.h  commands.cpp  commands.h  pipeline.cpp  pipeline.h  texturing.cpp  texturing.h
src/loader/: cache.h  glsl_to_cpp.cpp  glsl_to_cpp.h  models.cpp  models.h  shader_codegen.cpp  shader_resource_limits.h  shaders.h  stb_image.h  texture.cpp  texture.h
src/pipelines/: quad.h  textured.cpp  textured.h
